JPA repository, dependency injection, database seeding

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 # H2 CLIENT
-server.port=8090
+#server.port=8090
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
